# robot_arm_sim

Assem1/config/: joint_names_Assem1.yaml
Assem1/meshes/: base_link.STL  link_1.STL  link_2.STL  link_3.STL  link_4.STL  link_4_1.STL  link_4_2.STL
Assem1/urdf/: Assem1.csv
Solidworks/: Assem1.SLDASM  Part1.SLDPRT  Part2.SLDPRT  Part3.SLDPRT  Part4.SLDPRT  Part5.SLDPRT  Part6.SLDPRT  Part7.SLDPRT  Part8.SLDPRT  Part9.SLDPRT
install/: local_setup.sh  setup.sh
install/six_dof_arm/share/six_dof_arm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/six_dof_arm/share/six_dof_arm/cmake/: six_dof_armConfig.cmake
install/six_dof_arm/share/six_dof_arm/config/: six_dof_arm_controllers.yaml
install/six_dof_arm/share/six_dof_arm/launch/: example_launch.py  gazebo.launch.py  moveit_demo.launch.py
install/six_dof_arm/share/six_dof_arm/meshes/: link_1.STL  link_2.STL  link_3.STL  link_4.STL
install/six_dof_arm/share/six_dof_arm/urdf/: robot_arm_urdf.urdf  six_dof_arm.urdf
log/: latest_build  latest_list
models/: cats_dogs_model.py  cnn_test.py  functional.py  rnn_model.py  save_load.py  star_wars_model.py  test_model.py  transfer_learning.py  y.pickle
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/log/: latest_build
src/my_cubes_pkg/: setup.cfg  setup.py
src/my_environment_pkg/: setup.py
src/my_robot_pkg/: setup.py
src/six_dof_arm/: CMakeLists.txt
src/six_dof_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/six_dof_arm_moveit_config/config/: initial_positions.yaml  moveit_controllers.yaml  six_dof_arm.ros2_control.xacro
src/six_dof_arm_moveit_config/launch/: robot_arm.launch.py
(+341 files in other folders)
